This file is here to allow devs to easily add stuff in the release
notes for the next release, it allows easy syncing with the release
team, since you don't have to be around when the release takes
place...

Just dump whatever you want to have mentioned in the release notes
here. Please take care that it is in a way that allows copy&paste to
the release notes. That is making sure that spelling/grammar/whatever
is usable and that you are using complete sentences, not just single
words.

The release team should empty this file after each release.

***

The Drake Slasher became the Drake Arbiter and the Drake Gladiator became the Drake Slasher to establish more consistency in the unit lines. Unfortunately these renamings can not be done automatically (in wmllint) so UMC authors need to do them by hand.

***

Minimum version for Boost is now 1.35.

***

REPLACE ME WITH CONTENT...

***

REPLACE ME WITH CONTENT...

***