@@ -24,8 +24,7 @@ You'll need to have these libraries (with equivalent devel versions) to build We
 
 These libraries are optional dependencies that unlock additional features:
 
- gtkmm-2.4 >= 2.8.0 (needed by libnotifymm)
- libnotifymm-1.0 (used for desktop notifications)
+ libdbus-1 (used for desktop notifications)
 
 There are currently three ways to build wesnoth:
  * The old autotools system
