@@ -48,6 +48,7 @@ Version 1.7.2+svn:
    * No longer "crash" upon invalid pango markup
    * It's now possible to display the area a widget uses, for debug purposes
    * The widget in a stacked widget now grows properly
+   * Merged code for FDO and KDE desktop notification; only dbus is needed
 
 Version 1.7.2:
  * Campaigns:
